[package]
name = "lam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.49"
rlua = "0.19.7"
tokio = { version = "1.32.0", default-features = false, features = [
  "macros",
  "rt-multi-thread",
] }

[dev-dependencies]
cucumber = "0.20.0"

[[test]]
name = "lam"
harness = false
